# godot_tts

./: .gitignore  README.md  build_commands  meson.build  meson_options.txt
.toolchains/: linux.arm64.toolchain  linux.armv7.toolchain  linux.x86.toolchain  linux.x86_64.toolchain  macos.arm64.toolchain  macos.universal.toolchain  macos.x86_64.toolchain  mingw.x86.toolchain  mingw.x86_64.toolchain
demo/: TTSDriver.gdns  UI.tscn  project.godot
demo/addons/libgdtts/: gdtts.gd  libgdtts.gdnlib  plugin.cfg
demo/addons/libgdtts/classes/: tts_driver.gdns
demo/libgdtts/: libgdtts.gdnlib
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/_sources/classes/: class_ttsdriver.rst.txt
docs/html/_sources/development/: compiling_desktop.rst.txt
docs/html/_static/: documentation_options.js
docs/html/classes/: class_ttsdriver.html  index.html
docs/html/development/: compiling_desktop.html  compiling_ios.html
docs/source/: conf.py
docs/source/classes/: index.rst
docs/source/development/: compiling_ios.rst
src/: array.cpp  array.h  dictionary.cpp  dictionary.h  gdnative.cpp  gdnative.h  register_types.cpp  tts_avspeech.mm  tts_common.cpp  tts_common.h  tts_core.cpp  tts_core.hpp  tts_driver.cpp  tts_driver.h  tts_driver.hpp  tts_libspeechd.cpp  tts_nsspeech.mm  tts_sapi.cpp  ustring.cpp  ustring.h  variant.cpp  variant.h
src/tts_libspeechd/: tts_libspeechd.cpp  tts_libspeechd.h
src/tts_nsspeech/: tts_nsspeech.h  tts_nsspeech.mm
src/tts_sapi/: tts_sapi.cpp  tts_sapi.h
toolchains/: android.arm64.toolchain  android.armv7.toolchain  android.x86.toolchain  android.x86_64.toolchain  ios.arm64.toolchain  ios.armv7.toolchain  ios.x86_64.toolchain  linux_mlib_x86.toolchain  mingw.x86.toolchain  mingw.x86_64.toolchain
